--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
         "react-countup": "^6.4.2",
         "react-dom": "^18.2.0",
         "react-redux": "^8.1.2",
-        "react-scripts": "5.0.1",
+        "react-scripts": "^5.0.1",
         "react-scroll-trigger": "^0.6.14",
         "redux": "^4.2.1",
         "redux-thunk": "^2.4.2",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "yousaf": "react-scripts start",
+        "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
